cleaned up un-necesary flexbox usage

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
       <section class="newsletter-child more">
         <h4>More in Space and Stronomy</h4>
 
-        <div class="more-child more-1">
+        <div class="more-child">
           <figure>
             <img src="icons/china-rocket.jpg" alt="The Long March 5 rocket taking off from Wenchang Space Launch Center in Hainan province on Monday." width="234">
             <figcaption>Tingshu Wang/Reuters</figcaption>
@@ -568,7 +568,7 @@
           <p class="page-date">Nov. 24</p>
         </div>
 
-        <div class="more-child more-2">
+        <div class="more-child">
           <figure>
             <img src="icons/arecibo.jpg" alt="The Arecibo Observatory in Puerto Rico in 2018." width="234">
             <figcaption>K.C. Wilsey, via Alamy</figcaption>
@@ -577,7 +577,7 @@
           <p class="page-date">Nov. 19</p>
         </div>
 
-        <div class="more-child more-3">
+        <div class="more-child">
           <figure>
             <img src="icons/mars-volcano.jpg" alt="An infrared image mosaic of the Elysium Mons volcano taken by the Mars Odyssey spacecraft in 2001." width="234">
             <figcaption>NASA/JPL-Caltech/Arizona State University</figcaption>
@@ -586,7 +586,7 @@
           <p class="page-date">Nov. 25</p>
         </div>
 
-        <div class="more-child more-4" >
+        <div class="more-child" >
           <figure>
             <img src="icons/resilience-crew.jpg" alt="From left, Shannon Walker, Victor Glover, Mike Hopkins and Soichi Noguchi, the four astronauts who launched toward the space station on Sunday." width="234">
             <figcaption>Cj Gunther/EPA, via Shutterstock</figcaption>
@@ -595,7 +595,7 @@
           <p class="page-date">Nov. 16</p>
         </div>
 
-        <div class="more-child more-5">
+        <div class="more-child">
           <figure>
             <img src="icons/microbe.jpg" alt="A microsope image of Sphingomonas desiccabilis growing on basalt." width="234">
             <figcaption>Rosa Santomartino/University of Edinburgh</figcaption>
@@ -604,7 +604,7 @@
           <p class="page-date">Nov. 11</p>
         </div>
 
-        <div class="more-child more-6">
+        <div class="more-child">
           <figure>
             <img src="icons/iss-astronaut.jpg" alt="Stephen K. Robinson was anchored to the space station’s Canadarm2 in 2005." width="234">
             <figcaption>NASA</figcaption>
